v 1.0.7.4 (13 apr)

Council and "make senator" links are now hidden
Rockets were removed from the game
Oil prices of all space missions are increased by 5K
Space missions will not have chance of failure anymore

Players can now feed elders

v 1.0.7.3 (28 mar)

Changes by klusark:

Performance optimisation
Zip compression for save files
Fixed bug with coal calculation

<3
__

Changes by xranti:

Fixed CAD not affecting resource tooltips
No asterisks on unrolled proces
General fixes and tweaks

<3
___

Automatic Apocripha trigger upon reset
Some gimmick secret stuff
Slightly reduced price upgrades
Shift+click will construct max possible buildings.

Slightly reduced price of Space Elevators
Slightly buffed effects of Statis Chambers and Void Energy

Unicorn Selection
GM Catnip

v 1.0.7.2 (4 mar)

Changes by klusark:

Option to not confrim when clearing all jobs (gamePage.opts.noConfirm)
Numerous UI fixes/optimizations
Code refactoring and overhaul
__

Price of stasis chambers was reduced from 5 time crystals to 1
Flux condensator price and effect were both significantly reduced
Titanium price of space elevators was reduced.
All upgradale space missions will now have oil ratio of 5%.

Void Energy

v 1.0.7.1 (27 jan)

Significanlty reduced Chronospheres price
Chronospheres will no longer affect craftable resources unless Flux Condenator is researched
Fixed Anachronomancy not working correcrly

v 1.0.7.0 (25 jan)

Tankers
Workshow tab will now include total craft ratio (why not)
Improved menus layout a bit
Craftable price resources will be now unrolled to raw components (autocraft TBD)

v 1.0.6.0 (24 jan)

Changes by Zusias:

* Pausing the game and selling a building will no longer allow you to go above maximum for a resource. 
* Catnip demand ratio is no longer bugged after the rework of diminished returns. 
And with the addition of things like renaissance, you can now go above 100% catnip reduction if diminished returns aren't used.