@@ -16,7 +16,7 @@
 
 		<script src="core.js?v=1.0.7.3" 		type="text/javascript"></script>
 		<script src="resources.js?v=1.0.7.3" 	type="text/javascript"></script>
-		<script src="calendar.js?v=1.0.7.3" 	type="text/javascript"></script>
+		<script src="calendar.js?v=1.0.7.3b" 	type="text/javascript"></script>
 		<script src="buildings.js?v=1.0.7.3b" 	type="text/javascript"></script>
 		<script src="village.js?v=1.0.7.3" 		type="text/javascript"></script>
 		<script src="science.js?v=1.0.7.3" 		type="text/javascript"></script>
@@ -27,7 +27,7 @@
 		<script src="space.js?v=1.0.7.3" 		type="text/javascript"></script>
 		<script src="prestige.js?v=1.0.7.3" 	type="text/javascript"></script>
 
-		<script src="game.js?v=1.0.7.3" 		type="text/javascript"></script>
+		<script src="game.js?v=1.0.7.3b" 		type="text/javascript"></script>
 
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
