@@ -1,11 +1,17 @@
 v 1.0.7.4 (13 apr)
 
+Changes by CheezyBob:
+
+Fixed a bug with observatories bonus
+___
+
 Council and "make senator" links are now hidden
 Rockets were removed from the game
 Oil prices of all space missions are increased by 5K
 Space missions will not have chance of failure anymore
 
-Players can now feed elders
+Elders proc and TC output were slightly nerfed
+
 
 v 1.0.7.3 (28 mar)
 
